Fixed h3 spacing issue #210 (#232)

--- a/src/scss/_components/_kb.scss
+++ b/src/scss/_components/_kb.scss
@@ -69,7 +69,7 @@ div.docs table {
 }
 
 div.docs h2,
-h3 {
+div.docs h3 {
   padding-top: 80px;
   margin-top: -80px;
 }
